syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

// The student service definition.
service RemoteStudent {
	rpc GetStudentInfo (StudentLookupModel) returns (StudentModel);
	rpc InsertStudent (StudentModel) returns (Reply);
	rpc UpdateStudent (StudentModel) returns (Reply);
	rpc DeleteStudent (StudentLookupModel) returns (Reply);
	rpc RetrieveAllStudents (Empty) returns (StudentList);
	rpc RetrieveAllStudentsFilter (RetrieveOptions) returns (StudentList);
}

message Empty {}

message RetrieveOptions{
string filter = 1;
}

message StudentList {
   repeated StudentModel items = 1;
}

message Reply {
	string result = 1;
	bool isOk = 2;
}

// The request message 
message StudentLookupModel {
  int32 studentId = 1;
}

// The response message 
message StudentModel {
  int32 studentId = 1;  
  string firstName = 2;
  string lastName = 3;
  string school = 4;
}
